--- a/Dyoub.App/Views/Portfolio/Index.cshtml
+++ b/Dyoub.App/Views/Portfolio/Index.cshtml
@@ -6,3 +6,146 @@
 @{
     Layout = "~/Views/Layout.cshtml";
 }
+
+<div class="portfolio">
+    <div class="navbar fixed">
+        <div class="container">
+            <div class="grid-row">
+                <div class="grid-column small-3 medium-3 large-3 logo">
+                    <img class="dyoub" alt="dyoub" />
+                </div>
+                <div class="grid-column compact-8 small-6 medium-6 large-6 menu">
+                    <button type="button" class="large primary" data-section-link="body" data-translate="Intro"></button>
+                    <button type="button" class="large primary" data-section-link="#solutions" data-translate="Solutions"></button>
+                    <button type="button" class="large primary" data-section-link="#pricing" data-translate="Pricing"></button>
+                </div>
+                <div class="grid-column compact-4 small-3 medium-3 large-3 signin">
+                    <a href="/soon" class="as-button primary" data-translate="Sign in"></a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="header">
+        <div class="slogan">
+            <span data-translate="Developing your business."></span>
+            <span class="highlight" data-translate="Simple."></span>
+        </div>
+        <img class="devices" alt="All devices" />
+    </div>
+
+    <div class="signup">
+        <span data-translate="Sign up with one free user in the first month."></span>
+        <a href="/soon" class="as-button success large bordered" data-translate="Sign up"></a>
+    </div>
+
+    <div class="usage">
+        <div class="container">
+            <div class="grid-row">
+                <div class="grid-column small-6 compact-6 small-6 medium-6 large-6">
+                    <div class="usage-art">
+                        <img class="guy-working" alt="Guy working" />
+                    </div>
+                </div>
+                <div class="grid-column small-6 compact-6 small-6 medium-6 large-6">
+                    <div class="usage-description">
+                        <p data-translate="Do everything online."></p>
+                        <p data-translate="Anytime you want."></p>
+                        <p data-translate="Anywhere you like."></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="solutions" class="solutions">
+        <div class="section-title">
+            <p data-translate="Solutions we have for you."></p>
+            <p class="section-subtitle" data-translate="We are excited to help your business grow."></p>
+        </div>
+        <div class="container">
+            <div class="grid-row amethyst">
+                <div class="grid-column small-6 small-6 medium-6 large-6 left">
+                    <div class="title" data-translate="Multistore"></div>
+                    <div class="description" data-translate="Manage mulltiple shops in one place."></div>
+                </div>
+                <div class="grid-column small-6 medium-6 large-6 right">
+                    <div class="title" data-translate="Team management"></div>
+                    <div class="description" data-translate="Invite people to work with you."></div>
+                </div>
+            </div>
+            <div class="grid-row info">
+                <div class="grid-column small-6 medium-6 large-6 left">
+                    <div class="title" data-translate="Commercial"></div>
+                    <div class="description" data-translate="Purchase, sale and rent operations."></div>
+                </div>
+                <div class="grid-column small-6 medium-6 large-6 right">
+                    <div class="title" data-translate="Product and services"></div>
+                    <div class="description" data-translate="Organize your catalog and pricing table."></div>
+                </div>
+            </div>
+            <div class="grid-row success">
+                <div class="grid-column small-6 medium-6 large-6 left">
+                    <div class="title" data-translate="Financial"></div>
+                    <div class="description" data-translate="Evaluate your cash flow in real time."></div>
+                </div>
+                <div class="grid-column small-6 medium-6 large-6 right">
+                    <div class="title" data-translate="Incomes and expenses"></div>
+                    <div class="description" data-translate="Fixed expenses, receipt of credit card, etc."></div>
+                </div>
+            </div>
+            <div class="grid-row danger">
+                <div class="grid-column small-6 medium-6 large-6 left">
+                    <div class="title" data-translate="Inventory"></div>
+                    <div class="description" data-translate="Incoming, outcoming and transfer orders."></div>
+                </div>
+                <div class="grid-column small-6 medium-6 large-6 right">
+                    <div class="title" data-translate="More much..."></div>
+                    <div class="description" data-translate="See for yourself what is coming."></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="contact">
+        <div class="section-title">
+            <p data-translate="Not found what you’re looking for?"></p>
+            <p class="section-subtitle" data-translate="Tell us about it."></p>
+        </div>
+        <a href="mailto:hello@dyoub.com" class="as-button primary bordered">
+            hello@dyoub.com
+        </a>
+    </div>
+
+    <div id="pricing" class="pricing">
+        <div class="section-title">
+            <p data-translate="Monthly payment,"></p>
+            <p class="section-subtitle" data-translate="with one user free in the first month."></p>
+        </div>
+        <div class="price">
+            <span class="value">R$19</span>/<span data-translate="user"></span>
+        </div>
+        <a href="/soon" class="as-button success bordered" data-translate="Create an account"></a>
+    </div>
+
+    <div class="footer">
+        <img class="d" />
+        <div>Dyoub Applications</div>
+        <div class="social-media">
+            <a href="https://facebook.com/dyoubapp" target="_blank">
+                <i class="fa fa-facebook-square"></i>
+            </a>
+            <a href="https://twitter.com/dyoubapp" target="_blank">
+                <i class="fa fa-twitter-square"></i>
+            </a>
+            <a href="https://instagram.com/dyoubapp" target="_blank">
+                <i class="fa fa-instagram"></i>
+            </a>
+        </div>
+        <div class="docs">
+            <a href="/" target="_blank" data-translate="Terms of use"></a>
+            <span class="separator"></span>
+            <a href="/" target="_blank" data-translate="Privacy"></a>
+        </div>
+    </div>
+</div>
