Add title to logo image

--- a/Dyoub.App/Views/Portfolio/Index.cshtml
+++ b/Dyoub.App/Views/Portfolio/Index.cshtml
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="grid-row">
                 <div class="grid-column small-3 medium-3 large-3 logo">
-                    <img class="dyoub" alt="dyoub" />
+                    <img class="dyoub" title="dyoub" alt="dyoub" />
                 </div>
                 <div class="grid-column compact-8 small-6 medium-6 large-6 menu">
                     <button type="button" class="large primary" data-section-link="body" data-translate="Intro"></button>
