--- a/src/Dyoub.App/Views/Portfolio/Index.cshtml
+++ b/src/Dyoub.App/Views/Portfolio/Index.cshtml
@@ -20,7 +20,7 @@
                     <button type="button" class="large primary" data-section-link="#pricing" data-translate="Pricing"></button>
                 </div>
                 <div class="grid-column compact-4 small-3 medium-3 large-3 signin">
-                    <a href="/soon" class="as-button primary" data-translate="Sign in"></a>
+                    <a href="/signin" class="as-button primary" data-translate="Sign in"></a>
                 </div>
             </div>
         </div>
@@ -36,7 +36,7 @@
 
     <div class="signup">
         <span data-translate="Sign up with one free user in the first month."></span>
-        <a href="/soon" class="as-button success large bordered" data-translate="Sign up"></a>
+        <a href="/signup" class="as-button success large bordered" data-translate="Sign up"></a>
     </div>
 
     <div class="usage">
@@ -125,7 +125,7 @@
         <div class="price">
             <span class="value">R$19</span>/<span data-translate="user"></span>
         </div>
-        <a href="/soon" class="as-button success bordered" data-translate="Create an account"></a>
+        <a href="/signup" class="as-button success bordered" data-translate="Create account"></a>
     </div>
 
     <div class="footer">
