Resize signup button on portfolio

--- a/src/Dyoub.App/Views/Portfolio/Index.cshtml
+++ b/src/Dyoub.App/Views/Portfolio/Index.cshtml
@@ -36,7 +36,7 @@
 
     <div class="signup">
         <span data-translate="Sign up with one free user in the first month."></span>
-        <a href="/signup" class="as-button success large bordered" data-translate="Sign up"></a>
+        <a href="/signup" class="as-button success bordered" data-translate="Sign up"></a>
     </div>
 
     <div class="usage">
