--- a/src/Dyoub.App/Views/Account/Users/Signin.cshtml
+++ b/src/Dyoub.App/Views/Account/Users/Signin.cshtml
@@ -9,7 +9,9 @@
 
 <div class="container" data-ng-controller="SigninController as controller">
     <div class="text-center">
-        <img alt="dyoub" src="https://dyoub.s3.amazonaws.com/cdn/img/dyoub-silver.png" />
+        <a href="/">
+            <img alt="dyoub" src="https://dyoub.s3.amazonaws.com/cdn/img/dyoub-silver.png" />
+        </a>
     </div>
 
     <form name="controller.signinForm" class="sign" data-ng-submit="controller.signin()">
