--- a/src/Dyoub.App/Views/Account/Users/Signup.cshtml
+++ b/src/Dyoub.App/Views/Account/Users/Signup.cshtml
@@ -9,7 +9,7 @@
 
 <div class="container" data-ng-controller="SignupController as controller">
     <div class="text-center">
-        <img alt="dyoub" src="https://dyoub.s3.amazon.com/cdn/img/dyoub-silver.png" />
+        <img alt="dyoub" src="https://dyoub.s3.amazonaws.com/cdn/img/dyoub-silver.png" />
     </div>
 
     <form name="controller.signupForm" class="sign" data-ng-submit="controller.signup()">
