--- a/src/Dyoub.App/Views/Account/Users/SignupSoon.cshtml
+++ b/src/Dyoub.App/Views/Account/Users/SignupSoon.cshtml
@@ -9,13 +9,11 @@
 
 <div class="container">
     <div class="text-center">
-        <a href="/">
-            <img alt="dyoub" src="https://dyoub.s3.amazonaws.com/cdn/img/dyoub-silver.png" />
-        </a>
+        <img alt="dyoub" src="https://dyoub.s3.amazonaws.com/cdn/img/dyoub-silver.png" />
     </div>
 
     <div class="sign text-center font-14">
-        <p>Você poderá criar uma conta em breve.</p>
+        <p>Em breve você poderá criar uma conta em <a href="/">dyoub.com</a>.</p>
     </div>
 
     <div class="box text-center">
