--- a/src/Dyoub.App/Views/Errors/AccessDenied.cshtml
+++ b/src/Dyoub.App/Views/Errors/AccessDenied.cshtml
@@ -1,11 +1,11 @@
 ﻿@{
-    Layout = "~/Views/Index.cshtml";
+    Layout = "~/Views/Layout.cshtml";
 }
 
 <div class="container">
     <div class="error danger">
         <i class="fa fa-ban"></i>
         <p data-translate="403"></p>
-        <a href="/" class="as-button" data-translate="GoToDashboard"></a>
+        <a href="/" class="as-button" data-translate="Go back to dashboard"></a>
     </div>
 </div>
