--- a/src/Dyoub.App/Views/Errors/AccessDenied.cshtml
+++ b/src/Dyoub.App/Views/Errors/AccessDenied.cshtml
@@ -1,4 +1,9 @@
-﻿@{
+﻿@*
+    Copyright (c) Dyoub Applications. All rights reserved.
+    Licensed under MIT (https://github.com/dyoub/app/blob/master/LICENSE).
+*@
+
+@{
     Layout = "~/Views/Layout.cshtml";
 }
 
