--- a/src/Dyoub.App/Views/Errors/AccessDenied.cshtml
+++ b/src/Dyoub.App/Views/Errors/AccessDenied.cshtml
@@ -11,6 +11,6 @@
     <div class="error danger">
         <i class="fa fa-ban"></i>
         <p data-translate="403"></p>
-        <a href="/" class="as-button" data-translate="Go back to dashboard"></a>
+        <a href="/dashboard" class="as-button" data-translate="Go back to dashboard"></a>
     </div>
 </div>
