--- a/src/Dyoub.App/Views/Errors/InternalError.cshtml
+++ b/src/Dyoub.App/Views/Errors/InternalError.cshtml
@@ -11,6 +11,6 @@
     <div class="error danger">
         <i class="fa fa-exclamation-circle"></i>
         <p data-translate="500"></p>
-        <a href="/" class="as-button" data-translate="Go back to dashboard"></a>
+        <a href="/dashboard" class="as-button" data-translate="Go back to dashboard"></a>
     </div>
 </div>
