--- a/src/Dyoub.App/Views/Layout.cshtml
+++ b/src/Dyoub.App/Views/Layout.cshtml
@@ -13,14 +13,14 @@
     <link rel="icon" href="https://dyoub.s3.amazonaws.com/cdn/img/dyoub.ico" />
     <link type="text/css" rel="stylesheet" href="https://dyoub.s3.amazonaws.com/cdn/css/normalize-5.0.0.min.css" />
     <link type="text/css" rel="stylesheet" href="https://dyoub.s3.amazonaws.com/cdn/css/font-awesome-4.7.0.min.css" />
-    <link type="text/css" rel="stylesheet" href="https://dyoub.s3.amazonaws.com/cdn/css/dyoub-theme-1.0.0.min.css" />
+    <link type="text/css" rel="stylesheet" href="https://dyoub.s3.amazonaws.com/cdn/css/dyoub-theme-1.0.1.min.css" />
     <title>dyoub</title>
 </head>
 <body>
     @if (Context.UserIdentity() != null)
     {
         <div class="navbar">
-            <a href="/" class="navbar-header">
+            <a href="/dashboard" class="navbar-header">
                 <i class="fa fa-th"></i>
                 @Context.UserIdentity().Name
             </a>
@@ -33,7 +33,7 @@
     @RenderBody()
     <script type="text/javascript" src="https://dyoub.s3.amazonaws.com/cdn/js/jquery-3.2.0.min.js"></script>
     <script type="text/javascript" src="https://dyoub.s3.amazonaws.com/cdn/js/angular-1.6.3.min.js"></script>
-    <script type="text/javascript" src="https://dyoub.s3.amazonaws.com/cdn/js/dyoub-theme-1.0.0.min.js"></script>
+    <script type="text/javascript" src="https://dyoub.s3.amazonaws.com/cdn/js/dyoub-theme-1.0.1.min.js"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/locale/pt-br.js")"></script>
     @Scripts.Render("~/Scripts/Bundle")
 </body>
