--- a/src/Dyoub.App/Views/Account/Dashboard/Catalog.cshtml
+++ b/src/Dyoub.App/Views/Account/Dashboard/Catalog.cshtml
@@ -12,7 +12,7 @@
 
     <div class="grid-row">
         <div class="grid-column compact-6 small-4 medium-4 large-3">
-            <button type="button" data-href="/products" class="as-button card primary" disabled>
+            <a href="/products" class="as-button card primary">
                 <div class="card-info">
                     <div data-translate="Records"></div>
                     <div class="value" data-ng-bind="controller.overview.counter.products"></div>
@@ -22,7 +22,7 @@
                     <span data-translate="Products"></span>
                     <i class="fa fa-angle-right"></i>
                 </div>
-            </button>
+            </a>
         </div>
         <div class="grid-column compact-6 small-4 medium-4 large-3">
             <button type="button" href="/services" class="as-button card primary" disabled>
