--- a/src/Dyoub.App/Views/Account/Dashboard/Management.cshtml
+++ b/src/Dyoub.App/Views/Account/Dashboard/Management.cshtml
@@ -7,7 +7,7 @@
     Layout = "~/Views/Layout.cshtml";
 }
 
-<div class="container">
+<div class="container" data-ng-controller="ManagementOverviewController as controller" data-ng-init="controller.init()">
     <div class="menu-header" data-translate="Management"></div>
 
     <div class="grid-row">
