--- a/src/Dyoub.App/Views/Account/Dashboard/Catalog.cshtml
+++ b/src/Dyoub.App/Views/Account/Dashboard/Catalog.cshtml
@@ -25,7 +25,7 @@
             </a>
         </div>
         <div class="grid-column compact-6 small-4 medium-4 large-3">
-            <button type="button" href="/services" class="as-button card primary" disabled>
+            <a href="/services" class="as-button card primary">
                 <div class="card-info">
                     <div data-translate="Records"></div>
                     <div class="value" data-ng-bind="controller.overview.counter.services"></div>
@@ -35,7 +35,7 @@
                     <span data-translate="Services"></span>
                     <i class="fa fa-angle-right"></i>
                 </div>
-            </button>
+            </a>
         </div>
         <div class="grid-column compact-6 small-4 medium-4 large-3">
             <button type="button" href="/pricing-tables" class="as-button card primary" disabled>
