Fix button on product edit page

--- a/src/Dyoub.App/Views/Catalog/Products/ProductEdit.cshtml
+++ b/src/Dyoub.App/Views/Catalog/Products/ProductEdit.cshtml
@@ -63,9 +63,9 @@
                             <div class="grid-column compact-6 small-6 medium-6 large-6">
                                 <div class="box">
                                     <label data-translate="Can fraction"></label>
-                                    <button type="button" data-ng-click="controller.product.canSellFraction = !controller.product.canSellFraction"
-                                            data-ng-class="{ 'success': controller.product.canSellFraction, 'danger': !controller.product.canSellFraction }"
-                                            data-translate="{{controller.product.canSellFraction}}"></button>
+                                    <button type="button" data-ng-click="controller.product.canFraction = !controller.product.canFraction"
+                                            data-ng-class="{ 'success': controller.product.canFraction, 'danger': !controller.product.canFraction }"
+                                            data-translate="{{controller.product.canFraction}}"></button>
                                 </div>
                             </div>
                         </div>
