--- a/src/Dyoub.App/Views/Account/Dashboard/Catalog.cshtml
+++ b/src/Dyoub.App/Views/Account/Dashboard/Catalog.cshtml
@@ -38,7 +38,7 @@
             </a>
         </div>
         <div class="grid-column compact-6 small-4 medium-4 large-3">
-            <button type="button" href="/pricing-tables" class="as-button card primary" disabled>
+            <a href="/pricing-tables" class="as-button card primary">
                 <div class="card-info">
                     <i class="fa fa-list-alt"></i>
                 </div>
@@ -46,7 +46,7 @@
                     <span data-translate="Pricing tables"></span>
                     <i class="fa fa-angle-right"></i>
                 </div>
-            </button>
+            </a>
         </div>
     </div>
 </div>
