--- a/src/Dyoub.App/Views/Account/Dashboard/Commercial.cshtml
+++ b/src/Dyoub.App/Views/Account/Dashboard/Commercial.cshtml
@@ -7,12 +7,12 @@
     Layout = "~/Views/Layout.cshtml";
 }
 
-<div class="container">
+<div class="container" data-ng-controller="CommercialOverviewController as controller" data-ng-init="controller.init()">
     <div class="menu-header" data-translate="Commercial"></div>
 
     <div class="grid-row">
         <div class="grid-column compact-6 small-4 medium-4 large-3">
-            <button type="button" href="/customers" class="as-button card emerald" disabled>
+            <a href="/customers" class="as-button card emerald">
                 <div class="card-info">
                     <div data-translate="Records"></div>
                     <div class="value" data-ng-bind="controller.overview.counter.customers"></div>
@@ -22,7 +22,7 @@
                     <span data-translate="Customers"></span>
                     <i class="fa fa-angle-right"></i>
                 </div>
-            </button>
+            </a>
         </div>
 
         <div class="grid-column compact-6 small-4 medium-4 large-3">
