--- a/src/Dyoub.App/Views/Portfolio/Index.cshtml
+++ b/src/Dyoub.App/Views/Portfolio/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@*
- *  Copyright (c) Dyoub Applications. All rights reserved.
- *  Licensed under MIT (https://github.com/dyoub/app/blob/master/LICENSE).
+    Copyright (c) Dyoub Applications. All rights reserved.
+    Licensed under MIT (https://github.com/dyoub/app/blob/master/LICENSE).
 *@
 
 @{
