--- a/src/Dyoub.App/Views/Account/Dashboard/Commercial.cshtml
+++ b/src/Dyoub.App/Views/Account/Dashboard/Commercial.cshtml
@@ -26,7 +26,7 @@
         </div>
 
         <div class="grid-column compact-6 small-4 medium-4 large-3">
-            <button type="button" href="/payment-methods" class="as-button card emerald" disabled>
+            <a href="/payment-methods" class="as-button card emerald">
                 <div class="card-info">
                     <div data-translate="Records"></div>
                     <div class="value" data-ng-bind="controller.overview.counter.paymentMethods"></div>
@@ -36,7 +36,7 @@
                     <span data-translate="Payment methods"></span>
                     <i class="fa fa-angle-right"></i>
                 </div>
-            </button>
+            </a>
         </div>
 
         <div class="grid-column compact-6 small-4 medium-4 large-3">
