--- a/src/Dyoub.App/Views/Account/Dashboard/Financial.cshtml
+++ b/src/Dyoub.App/Views/Account/Dashboard/Financial.cshtml
@@ -7,7 +7,7 @@
     Layout = "~/Views/Layout.cshtml";
 }
 
-<div class="container">
+<div class="container" data-ng-controller="FinancialOverviewController as controller" data-ng-init="controller.init()">
     <div class="menu-header" data-translate="Financial"></div>
 
     <div class="grid-row">
@@ -26,7 +26,7 @@
         </div>
 
         <div class="grid-column compact-6 small-4 medium-4 large-3">
-            <button type="button" href="/fixed-expenses" class="as-button card success" disabled>
+            <a href="/fixed-expenses" class="as-button card success">
                 <div class="card-info">
                     <div data-translate="This month"></div>
                     <div class="value" data-ng-bind="controller.overview.counter.fixedExpenses | currency"></div>
@@ -36,7 +36,7 @@
                     <span data-translate="Fixed expenses"></span>
                     <i class="fa fa-angle-right"></i>
                 </div>
-            </button>
+            </a>
         </div>
 
         <div class="grid-column compact-6 small-4 medium-4 large-3">
