--- a/src/Dyoub.App/Views/Layout.cshtml
+++ b/src/Dyoub.App/Views/Layout.cshtml
@@ -13,7 +13,7 @@
     <link rel="icon" href="https://dyoub.s3.amazonaws.com/cdn/img/dyoub.ico" />
     <link type="text/css" rel="stylesheet" href="https://dyoub.s3.amazonaws.com/cdn/css/normalize-5.0.0.min.css" />
     <link type="text/css" rel="stylesheet" href="https://dyoub.s3.amazonaws.com/cdn/css/font-awesome-4.7.0.min.css" />
-    <link type="text/css" rel="stylesheet" href="https://dyoub.s3.amazonaws.com/cdn/css/dyoub-theme-1.0.1.min.css" />
+    <link type="text/css" rel="stylesheet" href="https://dyoub.s3.amazonaws.com/cdn/css/dyoub-theme-1.0.3.min.css" />
     <title>dyoub</title>
 </head>
 <body>
@@ -31,10 +31,11 @@
     }
     <div data-dialog></div>
     @RenderBody()
+    <script type="text/javascript" src="https://dyoub.s3.amazonaws.com/cdn/js/moment-2.18.1.min.js"></script>
     <script type="text/javascript" src="https://dyoub.s3.amazonaws.com/cdn/js/jquery-3.2.0.min.js"></script>
     <script type="text/javascript" src="https://dyoub.s3.amazonaws.com/cdn/js/angular-1.6.3.min.js"></script>
-    <script type="text/javascript" src="https://dyoub.s3.amazonaws.com/cdn/js/dyoub-theme-1.0.1.min.js"></script>
-    <script type="text/javascript" src="@Url.Content("~/Scripts/locale/pt-br.js")"></script>
+    <script type="text/javascript" src="https://dyoub.s3.amazonaws.com/cdn/js/dyoub-theme-1.0.3.min.js"></script>
+    @Scripts.Render("~/Scripts/Language/pt-br")
     @Scripts.Render("~/Scripts/Bundle")
 </body>
 </html>
