Other cash activities

--- a/src/Dyoub.App/Views/Account/Dashboard/General.cshtml
+++ b/src/Dyoub.App/Views/Account/Dashboard/General.cshtml
@@ -77,7 +77,7 @@
                 <div class="card-info">
                     <div data-translate="Cash flow"></div>
                     <div data-translate="Fixed expenses"></div>
-                    <div data-translate="Cash transactions"></div>
+                    <div data-translate="Other cash activities"></div>
                     <div data-translate="Receivables anticipation"></div>
                     <i class="fa fa-pie-chart"></i>
                 </div>
