--- a/src/Dyoub.App/Views/Account/Dashboard/Financial.cshtml
+++ b/src/Dyoub.App/Views/Account/Dashboard/Financial.cshtml
@@ -40,7 +40,7 @@
         </div>
 
         <div class="grid-column compact-6 small-4 medium-4 large-3">
-            <button type="button" href="cash-transactions" class="as-button card success" disabled>
+            <a href="/other-cash-activities" class="as-button card success">
                 <div class="card-info">
                     <div data-translate="This month"></div>
                     <div class="value" data-ng-bind="controller.overview.counter.otherCashActivities"></div>
@@ -50,7 +50,7 @@
                     <span data-translate="Other cash activities"></span>
                     <i class="fa fa-angle-right"></i>
                 </div>
-            </button>
+            </a>
         </div>
 
         <div class="grid-column compact-6 small-4 medium-4 large-3">
