Fix not found message

--- a/src/Dyoub.App/Views/Catalog/PricingTables/PricingTableDetails.cshtml
+++ b/src/Dyoub.App/Views/Catalog/PricingTables/PricingTableDetails.cshtml
@@ -20,7 +20,7 @@
     <div class="ng-cloak" data-ng-show="controller.findComplete()">
         <div class="error" data-ng-show="controller.notFound">
             <i class="fa fa-exclamation-triangle"></i>
-            <p data-translate="Pricing table not found"></p>
+            <p data-translate="Pricing table not found."></p>
             <a href="/pricing-tables" class="as-button" data-translate="Go back"></a>
         </div>
 
