--- a/src/Dyoub.App/Views/Commercial/PaymentMethods/PaymentMethodDetails.cshtml
+++ b/src/Dyoub.App/Views/Commercial/PaymentMethods/PaymentMethodDetails.cshtml
@@ -17,7 +17,7 @@
     <div class="ng-cloak" data-ng-show="controller.searchComplete()">
         <div class="error" data-ng-show="controller.notFound">
             <i class="fa fa-exclamation-triangle"></i>
-            <p data-translate="Payment method not found"></p>
+            <p data-translate="Payment method not found."></p>
             <a href="/payment-methods" class="as-button" data-translate="Go back"></a>
         </div>
 
