--- a/src/Dyoub.App/Views/Manage/Stores/StoreEdit.cshtml
+++ b/src/Dyoub.App/Views/Manage/Stores/StoreEdit.cshtml
@@ -17,8 +17,8 @@
     <div class="ng-cloak" data-ng-show="controller.searchComplete()">
         <div class="error" data-ng-show="controller.notFound">
             <i class="fa fa-exclamation-triangle"></i>
-            <p data-translate="StoreNotFound"></p>
-            <a href="/stores" class="as-button" data-translate="GoBack"></a>
+            <p data-translate="Store not found."></p>
+            <a href="/stores" class="as-button" data-translate="Go back"></a>
         </div>
 
         <form name="controller.storeForm" data-ng-submit="controller.save()" data-ng-hide="controller.notFound">
