--- a/src/Dyoub.App/Views/Catalog/Products/ProductDetails.cshtml
+++ b/src/Dyoub.App/Views/Catalog/Products/ProductDetails.cshtml
@@ -17,8 +17,8 @@
     <div class="ng-cloak" data-ng-show="controller.searchComplete()">
         <div class="error" data-ng-show="controller.notFound">
             <i class="fa fa-exclamation-triangle"></i>
-            <p data-translate="ProductNotFound"></p>
-            <a href="/products" class="as-button" data-translate="GoBack"></a>
+            <p data-translate="Product not found."></p>
+            <a href="/products" class="as-button" data-translate="Go back"></a>
         </div>
 
         <div data-ng-hide="controller.notFound">
