--- a/src/Dyoub.App/Views/Commercial/Customers/CustomerEdit.cshtml
+++ b/src/Dyoub.App/Views/Commercial/Customers/CustomerEdit.cshtml
@@ -15,7 +15,7 @@
     <div class="ng-cloak" data-ng-show="controller.searchComplete()">
         <div class="error" data-ng-show="controller.notFound">
             <i class="fa fa-exclamation-triangle"></i>
-            <p data-translate="Customer not found"></p>
+            <p data-translate="Customer not found."></p>
             <a href="/customers" class="as-button" data-translate="Go back"></a>
         </div>
 
