--- a/src/Dyoub.App/Views/Financial/FixedExpenses/FixedExpenseEdit.cshtml
+++ b/src/Dyoub.App/Views/Financial/FixedExpenses/FixedExpenseEdit.cshtml
@@ -15,7 +15,13 @@
     <div class="loading box" data-ng-show="controller.searching"></div>
 
     <div class="ng-cloak" data-ng-show="controller.searchComplete()">
-        <form name="controller.fixedExpenseForm" data-ng-submit="controller.save()">
+        <div class="error" data-ng-show="controller.notFound">
+            <i class="fa fa-exclamation-triangle"></i>
+            <p data-translate="Fixed expense not found."></p>
+            <a href="/fixed-expenses" class="as-button" data-translate="Go back"></a>
+        </div>
+
+        <form name="controller.fixedExpenseForm" data-ng-submit="controller.save()" data-ng-hide="controller.notFound">
             <div class="box">
                 <button type="submit" class="success" data-ng-disabled="controller.saveBlocked()">
                     <span data-ng-hide="controller.saving" data-translate="Save"></span>
