--- a/src/Dyoub.App/Views/Financial/OtherCashActivities/OtherCashActivityEdit.cshtml
+++ b/src/Dyoub.App/Views/Financial/OtherCashActivities/OtherCashActivityEdit.cshtml
@@ -17,7 +17,7 @@
     <div class="ng-cloak" data-ng-show="controller.searchComplete()">
         <div class="error" data-ng-show="controller.notFound">
             <i class="fa fa-exclamation-triangle"></i>
-            <p data-translate="Cash activity not found"></p>
+            <p data-translate="Cash activity not found."></p>
             <a href="/other-cash-activities" class="as-button" data-translate="Go back"></a>
         </div>
 
