--- a/src/Dyoub.App/Views/Account/Dashboard/Account.cshtml
+++ b/src/Dyoub.App/Views/Account/Dashboard/Account.cshtml
@@ -7,12 +7,12 @@
     Layout = "~/Views/Layout.cshtml";
 }
 
-<div class="container">
+<div class="container" data-ng-controller="AccountOverviewController as controller" data-ng-init="controller.init()">
     <div class="menu-header" data-translate="Account"></div>
 
     <div class="grid-row">
         <div class="grid-column compact-6 small-4 medium-4 large-3">
-            <button type="button" data-href="/profile" class="card concrete" disabled>
+            <a href="/profile" class="as-button card concrete">
                 <div class="card-info">
                     <div data-ng-bind="controller.overview.user.email"></div>
                     <div class="value" data-ng-bind="controller.overview.user.name"></div>
@@ -22,7 +22,7 @@
                     <span data-translate="My profile"></span>
                     <i class="fa fa-angle-right"></i>
                 </div>
-            </button>
+            </a>
         </div>
 
         <div class="grid-column compact-6 small-4 medium-4 large-3">
