--- a/src/Dyoub.App/Views/Account/Dashboard/Commercial.cshtml
+++ b/src/Dyoub.App/Views/Account/Dashboard/Commercial.cshtml
@@ -40,7 +40,7 @@
         </div>
 
         <div class="grid-column compact-6 small-4 medium-4 large-3">
-            <button type="button" href="/sale-orders" class="as-button card emerald" disabled>
+            <a href="/sale-orders" class="as-button card emerald">
                 <div class="card-info">
                     <div data-translate="Today"></div>
                     <div class="value" data-ng-bind="controller.overview.counter.saleOrders"></div>
@@ -50,7 +50,7 @@
                     <span data-translate="Sale orders"></span>
                     <i class="fa fa-angle-right"></i>
                 </div>
-            </button>
+            </a>
         </div>
 
         <div class="grid-column compact-6 small-4 medium-4 large-3">
