--- a/src/Dyoub.App/Views/Catalog/Services/ServiceDetails.cshtml
+++ b/src/Dyoub.App/Views/Catalog/Services/ServiceDetails.cshtml
@@ -74,7 +74,7 @@
 
                 <div class="box">
                     <label data-translate="Additional information"></label>
-                    <strong data-ng-bind="controller.service.additionalInformation"></strong>
+                    <strong data-ng-bind-html="controller.service.additionalInformation | escapeHtml"></strong>
                     <strong data-ng-hide="controller.service.additionalInformation">-</strong>
                 </div>
             </div>
