--- a/src/Dyoub.App/Views/Account/Dashboard/General.cshtml
+++ b/src/Dyoub.App/Views/Account/Dashboard/General.cshtml
@@ -75,6 +75,7 @@
         <div class="grid-column medium-6 large-4">
             <a href="/dashboard/financial" class="as-button card emerald">
                 <div class="card-info">
+                    <div data-translate="Wallets"></div>
                     <div data-translate="Cash flow"></div>
                     <div data-translate="Fixed expenses"></div>
                     <div data-translate="Other cash activities"></div>
