--- a/src/Dyoub.App/Views/Account/Dashboard/Financial.cshtml
+++ b/src/Dyoub.App/Views/Account/Dashboard/Financial.cshtml
@@ -12,6 +12,20 @@
 
     <div class="grid-row">
         <div class="grid-column compact-6 small-4 medium-4 large-3">
+            <a href="/wallets" class="as-button card success">
+                <div class="card-info">
+                    <div data-translate="Records"></div>
+                    <div class="value" data-ng-bind="controller.overview.counter.wallets"></div>
+                    <i class="fa fa-money"></i>
+                </div>
+                <div class="card-title">
+                    <span data-translate="Wallets"></span>
+                    <i class="fa fa-angle-right"></i>
+                </div>
+            </a>
+        </div>
+
+        <div class="grid-column compact-6 small-4 medium-4 large-3">
             <button type="button" href="/cash-flow/daily" class="as-button card success" disabled>
                 <div class="card-info">
                     <div data-translate="Today"></div>
