--- a/src/Dyoub.App/Views/Commercial/SalePayments/SalePaymentsEdit.cshtml
+++ b/src/Dyoub.App/Views/Commercial/SalePayments/SalePaymentsEdit.cshtml
@@ -90,7 +90,7 @@
                 </div>
             </div>
 
-            <div class="card text-primary" data-translate="No payments"
+            <div class="card text-primary" data-translate="No payment added."
                  data-ng-show="controller.noPayments()"></div>
 
             <div class="card list">
